creusot/tests/should_fail/prusti/zombie_type_param/function.stderr
error[creusot]: Unsatisfied bound creusot_contracts::prusti::Zombie<&mut u32>: Trait
  --> function.rs:12:12
   |
12 | #[ensures(*id(x) == 5u32)]
   |            ^^^^^

error: aborting due to previous error

